@@ -1,3 +1,7 @@
+2012-06-20  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 0.99-4 after fixing the gnacopula() bugs.
+
 2012-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Description): big merge of 'copula' + 'nacopula'
